--- a/askmedaddy/templates/home.html
+++ b/askmedaddy/templates/home.html
@@ -3,13 +3,9 @@
 
 {% block content %}
 
-<form action = "add" method="POST">
-    {% csrf_token %}
-    Enter 1st num : <input type=text, name = "num1"><br>
-    Enter 2nd num : <input type=text, name = "num2"><br>
 
-    <input type=submit>
-</form>
+
+{{post}}
 
 {% endblock content %}
 
