--- a/askmedaddy/templates/base.html
+++ b/askmedaddy/templates/base.html
@@ -42,7 +42,7 @@
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="{% url 'signup' %}">Signup</a></li>
                 <li><a class="dropdown-item" href="{% url 'signup' %}">Login</a></li>
-                <li><a class="dropdown-item" href="{% url 'signup' %}">Logout</a></li>
+                <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
               </ul>
             </li>
             <li class="nav-item">
