--- a/askmedaddy/templates/login.html
+++ b/askmedaddy/templates/login.html
@@ -1,15 +1,33 @@
-<div id="login-box">
-    <div class="left">
-      <h1>Sign up</h1>
-      <form action='login' method='POST'>
-        {% csrf_token %}
-        <input type="text" name="username" placeholder="Username" />
-        <input type="password" name="password" placeholder="Password" />
-        <input type="submit" name="signup_submit" value="login" />
-      </form>
-      {% for message in messages %}
-        <h2> {{ message }} </h2>  
-      {% endfor %}
-    </div> 
-</div>
-    
+{% extends "base.html"  %}
+{% block content %}
+
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-6">
+            <h4>Login</h4>
+            <hr>
+            {% if messages %}
+                {% for message in messages %}
+                    <p class="alert alert-info">{{ message }}</p>
+                {% endfor %}
+            {% endif %}
+
+            <form method="post">
+
+                {% csrf_token %}
+
+                <table class="table">
+                    {{ form.as_table }}
+                    <tr>
+                        <td><input type="hidden" name="next" value="{{ next }}"></td>
+                        <td><button type="submit" class="btn btn-primary">Submit</button></td>
+                    </tr>
+                </table>
+
+            </form>
+        </div>
+
+        
+
+    </div>
+
+{% endblock %}
