--- a/askmedaddy/templates/add_post.html
+++ b/askmedaddy/templates/add_post.html
@@ -4,8 +4,9 @@
 
 <div id="login-box">
     <h1>Add Post</h1>
-    <form action='add-post' method='POST'>
+    <form method='POST'>
       {% csrf_token %}
+
       {{ form.as_p}}
         
       <input type="submit" />
