--- a/askmedaddy/templates/base.html
+++ b/askmedaddy/templates/base.html
@@ -41,7 +41,7 @@
                 <li><a class="dropdown-item" href="#">Another action</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="{% url 'signup' %}">Signup</a></li>
-                <li><a class="dropdown-item" href="{% url 'signup' %}">Login</a></li>
+                <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
                 <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
               </ul>
             </li>
