--- a/postitdaddy/templates/base.html
+++ b/postitdaddy/templates/base.html
@@ -16,7 +16,7 @@
   
   <body>
     <!-- Start of NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <a class="navbar-brand" href="#">Post it Daddy!</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -53,15 +53,10 @@
         </ul>
       </div>
     </nav>
+
     <!-- End of NAVBAR -->
 
     <!-- Start of BODY -->
-
-    <div class="main-body-container">
-
-    </div>
-
-
 
 
     <!-- END of BODY -->
