--- a/postitdaddy/static/style.css
+++ b/postitdaddy/static/style.css
@@ -49,7 +49,6 @@ html, body{
   cursor: pointer;
 }
 
-
 .card-thread-main{
     padding: 5px 30px 0px 40px;
 }
@@ -187,7 +186,14 @@ html, body{
   margin-top: 1.5rem;
 }
 
-
+.card-thread-container-post{
+  background-color: white!important;
+  padding: 0!important;
+  margin: 0!important;
+  width: 100%;
+  border: 1.5px solid rgb(197, 197, 197);
+  border-radius: 4px;
+}
 
 
 
