--- a/postitdaddy/templates/base.html
+++ b/postitdaddy/templates/base.html
@@ -10,14 +10,20 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" rel="stylesheet" href="{% static 'style.css' %}">
-    
+    <script src="https://cdn.tiny.cloud/1/z55rou3yslqlkbu61hiod64pero7npehhqvqxq3j73uy0a77/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    <script>
+      tinymce.init({
+        selector: '#mytextarea'
+        
+      });
+    </script>
     <title>Post it Daddy! ⋅ Home </title>
   </head>
   
   <body>
     <!-- Start of NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-      <a class="navbar-brand" href="#">Post it Daddy!</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Post it Daddy!</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
