--- a/postitdaddy/templates/base.html
+++ b/postitdaddy/templates/base.html
@@ -129,6 +129,31 @@
       </div>
     </div>
 
+    <!-- create community Modal -->
+    <div class="modal fade" id="createCommunityModal" tabindex="-1" role="dialog" aria-labelledby="createCommunityModal" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="createCommunityModal">Create Community</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form action="{% url 'add_community' %}" method="post">
+              {% csrf_token %}
+              {{commForm}}
+              <div class="comm-form-buttons float-right">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Create Community</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>    
+    <!-- END of BODY -->    
+
     <!-- END of BODY -->
     
     
