--- a/postitdaddy/templates/index.html
+++ b/postitdaddy/templates/index.html
@@ -42,9 +42,11 @@
                     </h3>
                   </div>
 
-                  <div class="thread-mid-content row">
+                  <div class="center-image row">
                     {% if thread.image %}
-                    <img class="col align-self-center" src="{{ thread.image.url }}" alt="image">
+                    <div>
+                      <img class="col align-self-center" src="{{ thread.image.url }}" alt="image">
+                    </div>
                     {% else %}
                     <h5>{{ thread.content|safe|truncatechars:300 }}</h5> 
                     {% endif %}
@@ -70,7 +72,7 @@
               </div>
 
             <!-- Right Side About Links -->
-            <div class="col-4 right-body">
+            <div class="col-4 right-body ">
               <div class="card-links-container sticky-top">
                  <!-- First Box -->
                 <div class="card-links-right row">
@@ -89,43 +91,46 @@
                 <div class="card-links-right row" id="copyright-text">
                   <h1>Post it Daddy Inc © 2021 . All rights reserved</h1>
                 </div>
+
+                <!-- Buttons -->   
+                <div class="create-community-post">
+                  <div class="create-community-post-buttons">
+                    <a class="btn btn-primary create-community-post-button" id="create-post-button-cm" href="">Create Post</a>
+                  </div>
+                  <div class="create-community-post-buttons">
+                    <a class="btn btn-primary create-community-post-button" id="create-comm-button-cm" href="">Create Community</a>
+                  </div>
+                </div>
+
+                <div class="communities-right-box">
+                  <h5>Communities</h5>
+                  <div>
+                    {% for comm in comms %}
+
+                      <a href="{% url 'community_view' comm.slug %}"><li>{{comm}}</li></a>
+
+                    {% endfor %}
+                  </div>
+
+
+
+
+                </div>
+
               </div>
             </div>
+            
             
             <!-- End of Right Side About Links -->
         </div>
     </div>
 
-    <!-- create community Modal -->
-    <div class="modal fade" id="createCommunityModal" tabindex="-1" role="dialog" aria-labelledby="createCommunityModal" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="createCommunityModal">Create Community</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form action="{% url 'add_community' %}" method="post">
-              {% csrf_token %}
-              {{commForm.as_p}}
 
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary">Create Community</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>    
-    <!-- END of BODY -->
     
     
 
 
     
-
-
 
 
     <!-- Optional JavaScript -->
