--- a/postitdaddy/templates/index.html
+++ b/postitdaddy/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% load hitcount_tags %}
 
 {% block content %}
     <!-- Start of BODY -->
@@ -53,16 +53,16 @@
                   </div>
 
                   <div class="thread-bot-others row">
-                    <div class="thread-bot-upvote">
-                      
+                    <div class="thread-bot-elements" > 
+                      <img src="{% static 'svg/chat-dots.svg' %}" alt="">
+                      <h5>{{thread.num_comments}} Comment/s</h5>
                     </div>
-                    <div class="thread-bot-comments" > 
-                      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
-                        <path d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-                        <path d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125zm.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2z"/>
-                      </svg>
-                    <h5>{{thread.num_comments}} Comments</h5>
+
+                    <div class="thread-bot-elements" > 
+                      <img src="{% static 'svg/eye.svg' %}" alt="">
+                      <h5>{% get_hit_count for thread %} Read/s</h5>
                     </div>
+
                   </div>
                     </div>
                 </div>
@@ -79,15 +79,13 @@
                   <h1>About</h1>
                   <h1>Content Policy</h1>
                   <h1>Privacy Policy</h1>
+                  <h1>Put</h1>
+                  <h1>Links</h1>
+                  <h1>Here</h1>
                 </div>
 
                 <!-- Second Box -->                
-                <div class="card-links-container sticky-top links-second-box">
-                  <div class="card-links-right row">
-                    <a href="{% url 'add_thread' %}"><h1>Create Post</h1></a>
-                    <a data-toggle="modal" data-target="#createCommunityModal"><h1>Create Community</h1></a>
-                  </div>
-                </div>
+
                 <div class="card-links-right row" id="copyright-text">
                   <h1>Post it Daddy Inc © 2021 . All rights reserved</h1>
                 </div>
@@ -95,19 +93,19 @@
                 <!-- Buttons -->   
                 <div class="create-community-post">
                   <div class="create-community-post-buttons">
-                    <a class="btn btn-primary create-community-post-button" id="create-post-button-cm" href="">Create Post</a>
+                    <a class="btn btn-primary create-community-post-button" id="create-post-button-cm" href="{% url 'add_thread' %}">Create Post</a>
                   </div>
                   <div class="create-community-post-buttons">
-                    <a class="btn btn-primary create-community-post-button" id="create-comm-button-cm" href="">Create Community</a>
+                    <a class="btn btn-primary create-community-post-button" id="create-comm-button-cm" data-toggle="modal" data-target="#createCommunityModal">Create Community</a>
                   </div>
                 </div>
 
                 <div class="communities-right-box">
-                  <h5>Communities</h5>
+                  <a href="{% url 'community_list' %}"><h5>Communities</h5></a>
                   <div>
                     {% for comm in comms %}
 
-                      <a href="{% url 'community_view' comm.slug %}"><li>{{comm}}</li></a>
+                      <a href="{% url 'community_view' comm.slug %}"><li>/{{comm}}</li></a>
 
                     {% endfor %}
                   </div>
